oci/azure-service-operator/policies/linkerd-policies.yaml
---
# AuthorizationPolicy for health probes
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: aso-health
  namespace: azureserviceoperator-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: aso-health
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
---
# AuthorizationPolicy for webhook
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: aso-webhook
  namespace: azureserviceoperator-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: aso-webhook
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kube-api-server
---
# AuthorizationPolicy for proxy admin
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: proxy-admin
  namespace: azureserviceoperator-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: proxy-admin
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
